--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,7 @@
     "version": 2,
     "builds": [
       {
-        "src": "frontend/package.json",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "backend/server.js",
+        "src": "/server.js",
         "use": "@vercel/node"
       }
     ],
@@ -14,13 +10,9 @@
       {
         "src": "/api/(.*)",
         "dest": "backend/server.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "frontend/build/$1"
       }
     ],
     "env": {
-      "DATABASE_URL": "@database_url"
+      "POSTGRES_URL": "@database_url"
     }
-  }
+}
