--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,8 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "backend/server.js"
+        "src": "(.*)",
+        "dest": "/server.js"
       }
-    ],
-    "env": {
-      "POSTGRES_URL": "@database_url"
-    }
+    ]
 }
